nextlot-deploy/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextlot-frontend
  labels:
    app: nextlot
spec:
  replicas: 3 # run 3 copies (pods)
  selector:
    matchLabels:
      app: nextlot
  template:
    metadata:
      labels:
        app: nextlot
    spec:
      containers:
        - name: nextlot-frontend
          image: blessedak/nextlot-frontend:latest # your Docker image on DockerHub
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: '500m'
              memory: '512Mi'
            requests:
              cpu: '250m'
              memory: '256Mi'
