nextlot-deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nextlot-service
spec:
  selector:
    app: nextlot
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP # or LoadBalancer if you want external access
