nextlot-deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nextlot-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: nextlot.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nextlot-service
                port:
                  number: 80
